dev/test_programs/INVALID/group13/invalid_if.go
package main

func main() {
	else {
		println("hello")
	}
}
